--- a/index.html
+++ b/index.html
@@ -179,6 +179,11 @@
                 <span class="iconify" data-icon="logos:python" data-inline="false"></span>
                 &nbsp;&nbsp;<h3>Python</h3>
               </div>
+              <div class="icon-box" data-aos="zoom-in" data-aos-delay="50">
+                <!--<i class="ri-store-line" style="color: #ffbb2c;"></i>-->
+                <span class="iconify" data-icon="logos:python" data-inline="false"></span>
+                &nbsp;&nbsp;<h3>Python</h3>
+              </div>
             </div>
             <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
               <div class="icon-box" data-aos="zoom-in" data-aos-delay="100">
