--- a/index.html
+++ b/index.html
@@ -164,6 +164,11 @@
     <section id="features" class="features">
       <div class="container">
         <div class="row content">
+          <div class="row">
+  <div class="col-sm-4">.col-sm-4</div>
+  <div class="col-sm-4">.col-sm-4</div>
+  <div class="col-sm-4">.col-sm-4</div>
+</div>
           <div class="col" data-aos="fade-right" data-aos-delay="100">
             <div class="section-title" data-aos="fade-up">
               <!--<h2>Features</h2>-->
