--- a/index.html
+++ b/index.html
@@ -165,9 +165,18 @@
       <div class="container">
         <div class="row content">
           <div class="row">
-  <div class="col-sm-4">.col-sm-4</div>
-  <div class="col-sm-4">.col-sm-4</div>
-  <div class="col-sm-4">.col-sm-4</div>
+  <div class="col-sm-4">            <div class="section-title" data-aos="fade-up">
+                <!--<h2>Features</h2>-->
+                <p>test1</p>
+              </div></div>
+  <div class="col-sm-4">            <div class="section-title" data-aos="fade-up">
+                <!--<h2>Features</h2>-->
+                <p>test2</p>
+              </div></div>
+  <div class="col-sm-4">            <div class="section-title" data-aos="fade-up">
+                <!--<h2>Features</h2>-->
+                <p>test3</p>
+              </div></div>
 </div>
           <div class="col" data-aos="fade-right" data-aos-delay="100">
             <div class="section-title" data-aos="fade-up">
