--- a/index.html
+++ b/index.html
@@ -165,10 +165,31 @@
       <div class="container">
         <div class="row content">
           <div class="row">
-  <div class="col-sm-4">            <div class="section-title" data-aos="fade-up">
+  <div class="col-sm-4">
+          <div class="section-title" data-aos="fade-up">
                 <!--<h2>Features</h2>-->
                 <p>test1</p>
-              </div></div>
+              </div>
+              <div class="row" data-aos="fade-left">
+                <div class="section-title" data-aos="fade-up">
+                  <h2>Programming</h2>
+                </div>
+              <div class="col-lg-3 col-md-4">
+                <div class="icon-box" data-aos="zoom-in" data-aos-delay="50">
+                  <!--<i class="ri-store-line" style="color: #ffbb2c;"></i>-->
+                  <span class="iconify" data-icon="logos:python" data-inline="false"></span>
+                  &nbsp;&nbsp;<h3>Python</h3>
+                </div>
+              </div>
+              <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
+                <div class="icon-box" data-aos="zoom-in" data-aos-delay="100">
+                  <!--<i class="ri-bar-chart-box-line" style="color: #5578ff;"></i>-->
+                  <span class="iconify" data-icon="logos:java" data-inline="false"></span>
+                  &nbsp;&nbsp;<h3>Java</h3>
+                </div>
+              </div>
+            </div>
+            </div>
   <div class="col-sm-4">            <div class="section-title" data-aos="fade-up">
                 <!--<h2>Features</h2>-->
                 <p>test2</p>
