--- a/index.html
+++ b/index.html
@@ -164,44 +164,9 @@
     <section id="features" class="features">
       <div class="container">
         <div class="row content">
-          <div class="row">
-  <div class="col-sm-4">
-          <div class="section-title" data-aos="fade-up">
-                <!--<h2>Features</h2>-->
-                <p>test1</p>
-              </div>
-              <div class="row" data-aos="fade-left">
-                <div class="section-title" data-aos="fade-up">
-                  <h2>Programming</h2>
-                </div>
-              <div class="col-lg-3 col-md-4">
-                <div class="icon-box" data-aos="zoom-in" data-aos-delay="50">
-                  <!--<i class="ri-store-line" style="color: #ffbb2c;"></i>-->
-                  <span class="iconify" data-icon="logos:python" data-inline="false"></span>
-                  &nbsp;&nbsp;<h3>Python</h3>
-                </div>
-              </div>
-              <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
-                <div class="icon-box" data-aos="zoom-in" data-aos-delay="100">
-                  <!--<i class="ri-bar-chart-box-line" style="color: #5578ff;"></i>-->
-                  <span class="iconify" data-icon="logos:java" data-inline="false"></span>
-                  &nbsp;&nbsp;<h3>Java</h3>
-                </div>
-              </div>
-            </div>
-            </div>
-  <div class="col-sm-4">            <div class="section-title" data-aos="fade-up">
-                <!--<h2>Features</h2>-->
-                <p>test2</p>
-              </div></div>
-  <div class="col-sm-4">            <div class="section-title" data-aos="fade-up">
-                <!--<h2>Features</h2>-->
-                <p>test3</p>
-              </div>
-            </div>
-</div>
-      <!--    <div class="col" data-aos="fade-right" data-aos-delay="100">
+          <div class="col" data-aos="fade-right" data-aos-delay="100">
             <div class="section-title" data-aos="fade-up">
+              <!--<h2>Features</h2>-->
               <p>Skills</p>
             </div>
             <div class="row" data-aos="fade-left">
@@ -210,12 +175,14 @@
               </div>
             <div class="col-lg-3 col-md-4">
               <div class="icon-box" data-aos="zoom-in" data-aos-delay="50">
+                <!--<i class="ri-store-line" style="color: #ffbb2c;"></i>-->
                 <span class="iconify" data-icon="logos:python" data-inline="false"></span>
                 &nbsp;&nbsp;<h3>Python</h3>
               </div>
             </div>
             <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
               <div class="icon-box" data-aos="zoom-in" data-aos-delay="100">
+                <!--<i class="ri-bar-chart-box-line" style="color: #5578ff;"></i>-->
                 <span class="iconify" data-icon="logos:java" data-inline="false"></span>
                 &nbsp;&nbsp;<h3>Java</h3>
               </div>
@@ -224,12 +191,14 @@
           <div class="row" data-aos="fade-left">
             <div class="col-lg-3 col-md-4 mt-4">
               <div class="icon-box" data-aos="zoom-in" data-aos-delay="250">
+                <!--<i class="ri-database-2-line" style="color: #47aeff;"></i>-->
                 <span class="iconify" data-icon="logos:c-plusplus" data-inline="false"></span>
                 &nbsp;&nbsp;<h3>C++</h3>
               </div>
             </div>
             <div class="col-lg-3 col-md-4 mt-4">
               <div class="icon-box" data-aos="zoom-in" data-aos-delay="300">
+                <!--<i class="ri-gradienter-line" style="color: #ffa76e;"></i>-->
                 <span class="iconify" data-icon="logos:c" data-inline="false"></span>
                 &nbsp;&nbsp;<h3>C</h3>
               </div>
@@ -238,12 +207,14 @@
           <div class="row" data-aos="fade-left">
             <div class="col-lg-3 col-md-4 mt-4">
               <div class="icon-box" data-aos="zoom-in" data-aos-delay="450">
+                <!--<i class="ri-anchor-line" style="color: #b2904f;"></i>-->
                 <span class="iconify" data-icon="logos:javascript" data-inline="false"></span>
                 &nbsp;&nbsp;<h3>JavaScript</h3>
               </div>
             </div>
             <div class="col-lg-3 col-md-4 mt-4">
               <div class="icon-box" data-aos="zoom-in" data-aos-delay="500">
+                <!--<i class="ri-disc-line" style="color: #b20969;"></i>-->
                 <span class="iconify" data-icon="vscode-icons:file-type-perl" data-inline="false"></span>
                 &nbsp;&nbsp;<h3>Perl</h3>
               </div>
@@ -268,8 +239,8 @@
               <h3>TBD</h3>
               <p>Master's</p>
               <p></p>
-        </div> -->
-      </div> 
+        </div>
+      </div>
     </div>
     </section><!-- End Features Section -->
 
