--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
     <section id="features" class="features">
       <div class="container">
         <div class="row content">
-          <div class="col" data-aos="fade-right" data-aos-delay="100">
+          <div class="col-sm-4" data-aos="fade-right" data-aos-delay="100">
             <div class="section-title" data-aos="fade-up">
               <!--<h2>Features</h2>-->
               <p>Skills</p>
@@ -221,7 +221,7 @@
             </div>
             </div>
           </div>
-          <div class="col" data-aos="fade-left" data-aos-delay="200">
+          <div class="col-sm-4" data-aos="fade-left" data-aos-delay="200">
             <div class="section-title" data-aos="fade-up">
               <p>Education</p>
             </div>
@@ -240,6 +240,8 @@
               <p>Master's</p>
               <p></p>
         </div>
+        <div class="col-sm-4" data-aos="fade-left" data-aos-delay="200">
+      </div>
       </div>
     </div>
     </section><!-- End Features Section -->
