--- a/index.html
+++ b/index.html
@@ -241,6 +241,9 @@
               <p></p>
         </div>
         <div class="col-sm-4" data-aos="fade-left" data-aos-delay="200">
+          <div class="section-title" data-aos="fade-up">
+            <p>Education</p>
+          </div>
       </div>
       </div>
     </div>
