--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
           </div>
           <div class="col-sm-4" data-aos="fade-left" data-aos-delay="200">
             <div class="section-title" data-aos="fade-up">
-              <p>Education</p>
+              <p>Expertise</p>
             </div>
             <div class="row" data-aos="fade-left">
               <div class="section-title" data-aos="fade-up">
