--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
           <div class="col-sm-4" data-aos="fade-right" data-aos-delay="100">
             <div class="section-title" data-aos="fade-up">
               <!--<h2>Features</h2>-->
-              <p>Skills</p>
+              <p>Skills & Expertise</p>
             </div>
             <div class="row" data-aos="fade-left">
               <div class="section-title" data-aos="fade-up">
@@ -223,8 +223,9 @@
           </div>
           <div class="col-sm-4" data-aos="fade-left" data-aos-delay="200">
             <div class="section-title" data-aos="fade-up">
-              <p>Expertise</p>
+              <p>&nbsp;&nbsp;</p>
             </div>
+            <p>Test</p>
         </div>
         <div class="col-sm-4" data-aos="fade-left" data-aos-delay="200">
           <div class="section-title" data-aos="fade-up">
