--- a/index.html
+++ b/index.html
@@ -225,7 +225,9 @@
             <div class="section-title" data-aos="fade-up">
               <p>&nbsp;&nbsp;</p>
             </div>
-            <p>Test</p>
+            <div class="section-title" data-aos="fade-up">
+              <h2>Framework</h2>
+            </div>
         </div>
         <div class="col-sm-4" data-aos="fade-left" data-aos-delay="200">
           <div class="section-title" data-aos="fade-up">
