--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             <div class="col-lg-5 col-md-4">
               <div class="icon-box" data-aos="zoom-in" data-aos-delay="50">
                 <!--<i class="ri-store-line" style="color: #ffbb2c;"></i>-->
-                <span class="iconify" data-icon="logos:python" data-inline="false"></span>
+                <span class="iconify" data-icon="cib:docker" data-inline="false"></span>
                 &nbsp;&nbsp;<h3>Docker</h3>
               </div>
             </div>
