--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
               <p>&nbsp;&nbsp;</p>
             </div>
             <div class="section-title" data-aos="fade-up">
-              <h2>Framework</h2>
+              <h2>Platforms</h2>
             </div>
             <div class="row" data-aos="fade-left">
             <div class="col-lg-5 col-md-4">
@@ -239,8 +239,8 @@
             <div class="col-lg-5 col-md-4 mt-4 mt-md-0">
               <div class="icon-box" data-aos="zoom-in" data-aos-delay="100">
                 <!--<i class="ri-bar-chart-box-line" style="color: #5578ff;"></i>-->
-                <span class="iconify" data-icon="logos:java" data-inline="false"></span>
-                &nbsp;&nbsp;<h3>Java</h3>
+                <span class="iconify" data-icon="flat-color-icons:linux" data-inline="false"></span>
+                &nbsp;&nbsp;<h3>Linux</h3>
               </div>
             </div>
           </div>
