--- a/index.html
+++ b/index.html
@@ -244,6 +244,38 @@
               </div>
             </div>
           </div>
+          <div class="row" data-aos="fade-left">
+            <div class="col-lg-5 col-md-4 mt-4">
+              <div class="icon-box" data-aos="zoom-in" data-aos-delay="250">
+                <!--<i class="ri-database-2-line" style="color: #47aeff;"></i>-->
+                <span class="iconify" data-icon="logos:raspberry-pi" data-inline="false"></span>
+                &nbsp;&nbsp;<h3>Raspberry Pi</h3>
+              </div>
+            </div>
+            <div class="col-lg-5 col-md-4 mt-4">
+              <div class="icon-box" data-aos="zoom-in" data-aos-delay="300">
+                <!--<i class="ri-gradienter-line" style="color: #ffa76e;"></i>-->
+                <span class="iconify" data-icon="logos:arduino" data-inline="false"></span>
+                &nbsp;&nbsp;<h3>Arduino</h3>
+              </div>
+            </div>
+          </div>
+          <div class="row" data-aos="fade-left">
+            <div class="col-lg-5 col-md-4 mt-4">
+              <div class="icon-box" data-aos="zoom-in" data-aos-delay="250">
+                <!--<i class="ri-database-2-line" style="color: #47aeff;"></i>-->
+                <span class="iconify" data-icon="vscode-icons:file-type-robots" data-inline="false"></span>
+                &nbsp;&nbsp;<h3>ROSbot 2.0</h3>
+              </div>
+            </div>
+            <div class="col-lg-5 col-md-4 mt-4">
+              <div class="icon-box" data-aos="zoom-in" data-aos-delay="300">
+                <!--<i class="ri-gradienter-line" style="color: #ffa76e;"></i>-->
+                <span class="iconify" data-icon="logos:git" data-inline="false"></span>
+                &nbsp;&nbsp;<h3>Git</h3>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="col-sm-4" data-aos="fade-left" data-aos-delay="200">
           <div class="section-title" data-aos="fade-up">
