--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
             <div class="col-lg-5 col-md-4 mt-4">
               <div class="icon-box" data-aos="zoom-in" data-aos-delay="300">
                 <!--<i class="ri-gradienter-line" style="color: #ffa76e;"></i>-->
-                <span class="iconify" data-icon="logos:git" data-inline="false"></span>
+                <span class="iconify" data-icon="logos:git-icon" data-inline="false"></span>
                 &nbsp;&nbsp;<h3>Git</h3>
               </div>
             </div>
