--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             </div>
 
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="200">
-              <div class="icon"><i class="fa space-shuttle"></i><img src="/assets/img/nasa.png"/></div>
+              <div class="icon"><i class="fa space-shuttle"></i><img style="width: 48px; height: 40px" src="/assets/img/nasa.png"/></div>
               <h4 class="title"><a href="">NASA</a></h4>
               <p class="description">2019 | Software Engineer Intern</p>
             </div>
