--- a/index.html
+++ b/index.html
@@ -137,13 +137,13 @@
             <!--<p>Esse voluptas cumque vel exercitationem. Reiciendis est hic accusamus. Non ipsam et sed minima temporibus laudantium. Soluta voluptate sed facere corporis dolores excepturi. Libero laboriosam sint et id nulla tenetur. Suscipit aut voluptate.</p>-->
 
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="100">
-              <div class="icon"><i class="bx bx-badge"></i></div>
+              <div class="icon"><i><img style="width: 48px; height: 37px" src="/assets/img/lockheed.jpg"/></i></div>
               <h4 class="title"><a href="">Lockheed Martin</a></h4>
               <p class="description">2020 - Present | Software Engineer Associate</p>
             </div>
 
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="200">
-              <div class="icon"><i class="fa space-shuttle"></i><img style="width: 48px; height: 40px" src="/assets/img/nasa.png"/></div>
+              <div class="icon"><i><img style="width: 48px; height: 40px" src="/assets/img/nasa.png"/></i></div>
               <h4 class="title"><a href="">NASA</a></h4>
               <p class="description">2019 | Software Engineer Intern</p>
             </div>
