--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="300">
               <div class="icon"><i><img style="width: 48px; height: 48px" src="/assets/img/nyctreats.jpg"/></i></div>
               <h4 class="title"><a href="">NYC Treats</a></h4>
-              <p class="description">2014 - Present | CEO of Business with 145,000+ Follower Base</p>
+              <p class="description">2014 - Present | CEO with 145,000+ Follower Base</p>
             </div>
 
           </div>
