--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
         <ul>
           <li class="active"><a href="index.html">Home</a></li>
           <li><a href="#about">Work Experience</a></li>
-          <!-- <li><a href="#features">Features</a></li>
-          <li><a href="#gallery">Gallery</a></li>
+          <li><a href="#features">Skills</a></li>
+          <!--<li><a href="#gallery">Gallery</a></li>
           <li><a href="#team">Team</a></li>
           <li><a href="#pricing">Pricing</a></li>
           <li class="drop-down"><a href="">Drop Down</a>
