--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
             <div class="section-title" data-aos="fade-up">
               <h2>Undergraduate</h2>
             </div>
-              <h2>Binghamton University</h2>
+              <h2><b>Binghamton University</b></h2>
               <p>Bachelor of Science in Computer Science</p>
               <p>Class of 2020</p>
         </div>
