--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
           <div class="section-title" data-aos="fade-up">
             <h2>Graduate</h2>
           </div>
-            <h3>TBD</h3>
+            <h2><b>TBD</b></h2>
             <p>Master's</p>
             <p></p>
       </div>
