--- a/index.html
+++ b/index.html
@@ -138,19 +138,19 @@
 
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="100">
               <div class="icon"><i><img style="width: 48px; height: 37px" src="/assets/img/lockheed.png"/></i></div>
-              <h4 class="title"><a href="">Lockheed Martin</a></h4>
+              <h4 class="title"><a>Lockheed Martin</a></h4>
               <p class="description">2020 - Present | Software Engineer Associate</p>
             </div>
 
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="200">
               <div class="icon"><i><img style="width: 48px; height: 40px" src="/assets/img/nasa.png"/></i></div>
-              <h4 class="title"><a href="">NASA</a></h4>
+              <h4 class="title"><a>NASA</a></h4>
               <p class="description">2019 | Software Engineer Intern</p>
             </div>
 
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="300">
               <div class="icon"><i><img style="width: 48px; height: 48px" src="/assets/img/nyctreats.png"/></i></div>
-              <h4 class="title"><a href="">NYC Treats</a></h4>
+              <h4 class="title"><a>NYC Treats</a></h4>
               <p class="description">2014 - Present | CEO with 145,000+ Follower Base</p>
             </div>
 
