--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
             <h2>Graduate</h2>
           </div>
             <h2><b>TBD</b></h2>
-            <p>Master's</p>
+            <p>Master of Science</p>
       </div>
       </div>
     </div>
