--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
               <li><i class="icofont-check"></i> Facilis ut et voluptatem aperiam. Autem soluta ad fugiat.</li>
             </ul>
           </div>
-        </div>
+        </div> -->
 
       </div>
     </section><!-- End Details Section -->
