--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Montserrat:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Prata&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -287,7 +289,7 @@
             </div>
               <h2 style="font-family: 'Prata', serif;">Binghamton University</h2>
               <p>Bachelor of Science in Computer Science</p>
-              <p>Class of 2020</p>
+              <p style="font-family: 'Cinzel', serif;">Class of 2020</p>
         </div>
           <div class="section-title" data-aos="fade-up">
             <h2>Graduate</h2>
