--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
             <div class="section-title" data-aos="fade-up">
               <h2>Undergraduate</h2>
             </div>
-              <h2 style="font-family: 'Prata', serif;">Binghamton University</h2>
+              <h2 style="font-family: 'Prata', serif; font-size: 15px;">Binghamton University</h2>
               <p>Bachelor of Science in Computer Science</p>
               <p style="font-family: 'Cinzel', serif;">Class of 2020</p>
         </div>
