--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Prata&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;400&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -287,8 +291,8 @@
             <div class="section-title" data-aos="fade-up">
               <h2>Undergraduate</h2>
             </div>
-              <h2 style="font-family: 'Prata', serif; font-size: 15px;">Binghamton University</h2>
-              <p>Bachelor of Science in Computer Science</p>
+              <h2 style="font-family: 'Raleway', sans-serif; font-size: 25px;">Binghamton University</h2>
+              <p style="font-family: 'Raleway', sans-serif; font-size: 15px;">Bachelor of Science in Computer Science</p>
               <p style="font-family: 'Cinzel', serif;">Class of 2020</p>
         </div>
           <div class="section-title" data-aos="fade-up">
