--- a/index.html
+++ b/index.html
@@ -313,6 +313,7 @@
           <div class="col-md-4" data-aos="fade-right">
             <img src="assets/img/details-1.png" class="img-fluid" alt="">
           </div>
+          <h3>Work Experience</h3>
           <div class="col-md-8 pt-4" data-aos="fade-up">
             <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
             <p class="font-italic">
