--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;400&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;500&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -293,7 +295,7 @@
             </div>
               <h2 style="font-family: 'Raleway', sans-serif; font-size: 30px;">Binghamton University</h2>
               <p style="font-family: 'Raleway', sans-serif; font-size: 15px;">Bachelor of Science in Computer Science</p>
-              <p style="font-family: 'Cinzel', serif;">Class of 2020</p>
+              <p style="font-family: 'Raleway', sans-serif; font-size: 10px;">Class of 2020</p>
         </div>
           <div class="section-title" data-aos="fade-up">
             <h2>Graduate</h2>
