--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
       <div class="container">
 
         <div class="row content">
-          <h3>Work Experience</h3>
+          <h3>Project Experience</h3>
           <div class="col-md-4" data-aos="fade-right">
             <img src="assets/img/details-1.png" class="img-fluid" alt="">
           </div>
