--- a/index.html
+++ b/index.html
@@ -294,8 +294,8 @@
               <h2>Undergraduate</h2>
             </div>
               <h2 style="font-family: 'Raleway', sans-serif; font-size: 27px;">Binghamton University</h2>
-              <p style="font-family: 'Raleway', sans-serif; font-size: 15px;">Bachelor of Science in Computer Science</p>
-              <p style="font-family: 'Raleway', sans-serif; font-size: 15px;">Class of 2020</p>
+              <div style="font-family: 'Raleway', sans-serif; font-size: 15px;">Bachelor of Science in Computer Science</div>
+              <div style="font-family: 'Raleway', sans-serif; font-size: 15px;">Class of 2020</div>
         </div>
           <div class="section-title" data-aos="fade-up">
             <h2>Graduate</h2>
