--- a/index.html
+++ b/index.html
@@ -296,6 +296,7 @@
               <h2 style="font-family: 'Raleway', sans-serif; font-size: 27px;">Binghamton University</h2>
               <div style="font-family: 'Raleway', sans-serif; font-size: 15px;">Bachelor of Science in Computer Science</div>
               <div style="font-family: 'Raleway', sans-serif; font-size: 15px;">Class of 2020</div>
+              <div>&nbsp;&nbsp;</div>
         </div>
           <div class="section-title" data-aos="fade-up">
             <h2>Graduate</h2>
