--- a/index.html
+++ b/index.html
@@ -298,11 +298,13 @@
               <div style="font-family: 'Raleway', sans-serif; font-size: 15px;">Class of 2020</div>
               <div>&nbsp;&nbsp;</div>
         </div>
+        <div class="row" data-aos="fade-left">
           <div class="section-title" data-aos="fade-up">
             <h2>Graduate</h2>
           </div>
             <h2><b>TBD</b></h2>
             <p>Master of Science</p>
+            </div>
       </div>
       </div>
     </div>
