--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
         <div class="row content">
           <h3>Project Experience</h3>
           <div class="col-md-4" data-aos="fade-right">
-            <img src="assets/img/cs426.png" class="img-fluid" alt="">
+            <img src="assets/img/project1.png" class="img-fluid" alt="">
           </div>
           <div class="col-md-8 pt-4" data-aos="fade-up">
             <h3>Monitoring Home Security Through License Plate Reading and Image Recognition on an Android Application Utilizing Wireless Sensor Networks</h3>
