--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
             <div class="section-title" data-aos="fade-up">
               <h2>Undergraduate</h2>
             </div>
-              <h2 style="font-family: 'Raleway', sans-serif; font-size: 27px;">Binghamton University</h2>
+              <h2 style="font-family: 'Raleway', sans-serif; font-size: 27px;"><b>Binghamton University</b></h2>
               <div style="font-family: 'Raleway', sans-serif; font-size: 15px;">Bachelor of Science in Computer Science</div>
               <div style="font-family: 'Raleway', sans-serif; font-size: 15px;">Class of 2020</div>
               <div>&nbsp;&nbsp;</div>
@@ -302,8 +302,8 @@
           <div class="section-title" data-aos="fade-up">
             <h2>Graduate</h2>
           </div>
-            <h2><b>TBD</b></h2>
-            <p>Master of Science</p>
+            <h2 style="font-family: 'Raleway', sans-serif; font-size: 27px;"><b>TBD</b></h2>
+            <div style="font-family: 'Raleway', sans-serif; font-size: 15px;">Master of Science</div>
             </div>
       </div>
       </div>
