--- a/index.html
+++ b/index.html
@@ -322,15 +322,16 @@
           <div class="col-md-8 pt-4" data-aos="fade-up">
             <h3>Monitoring Home Security Through License Plate Reading and Image Recognition on an Android Application Utilizing Wireless Sensor Networks</h3>
             <p class="font-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              Home automation has become a convenience that homeowners enjoy and benefits society as a
+              crucial tool in home security. We aimed to design a low-cost, versatile automated garage door opener
+              that capitalizes on both ease-of-use and home security.
             </p>
-            <ul>
+            <!--<ul>
               <li><i class="icofont-check"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
               <li><i class="icofont-check"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
               <li><i class="icofont-check"></i> Iure at voluptas aspernatur dignissimos doloribus repudiandae.</li>
               <li><i class="icofont-check"></i> Est ipsa assumenda id facilis nesciunt placeat sed doloribus praesentium.</li>
-            </ul>
+            </ul>-->
             <p>
               Voluptas nisi in quia excepturi nihil voluptas nam et ut. Expedita omnis eum consequatur non. Sed in asperiores aut repellendus. Error quisquam ab maiores. Quibusdam sit in officia
             </p>
