--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
               <li><i class="icofont-check"></i> Est ipsa assumenda id facilis nesciunt placeat sed doloribus praesentium.</li>
             </ul>-->
             <p>
-              Voluptas nisi in quia excepturi nihil voluptas nam et ut. Expedita omnis eum consequatur non. Sed in asperiores aut repellendus. Error quisquam ab maiores. Quibusdam sit in officia
+              Each sensor and module proved to be a strong solution to the proposed simulation as they worked synonymously through system testing to communicate with the database and aid in accurate data transfer between devices.
             </p>
           </div>
         </div>
