--- a/index.html
+++ b/index.html
@@ -326,12 +326,15 @@
               crucial tool in home security. We aimed to design a low-cost, versatile automated garage door opener
               that capitalizes on both ease-of-use and home security.
             </p>
-            <!--<ul>
-              <li><i class="icofont-check"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-              <li><i class="icofont-check"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-              <li><i class="icofont-check"></i> Iure at voluptas aspernatur dignissimos doloribus repudiandae.</li>
-              <li><i class="icofont-check"></i> Est ipsa assumenda id facilis nesciunt placeat sed doloribus praesentium.</li>
-            </ul>-->
+            <ul>
+              <div class="section-title" data-aos="fade-up">
+                <h2>Skills Used</h2>
+              </div>
+              <li><i><span class="iconify" data-icon="logos:python" data-inline="false"></span></i> Python</li>
+              <li><i><span class="iconify" data-icon="logos:raspberry-pi" data-inline="false"></span></i> Raspberry Pi</li>
+              <li><i><span class="iconify" data-icon="flat-color-icons:linux" data-inline="false"></span></i> Linux</li>
+              <li><i><span class="iconify" data-icon="logos:git-icon" data-inline="false"></span></i> Git</li>
+            </ul>
             <p>
               Each sensor and module proved to be a strong solution to the proposed simulation as they worked synonymously through system testing to communicate with the database and aid in accurate data transfer between devices.
             </p>
