--- a/index.html
+++ b/index.html
@@ -331,6 +331,7 @@
                 <h2>Skills Used</h2>
               </div>
               <li><i><span class="iconify" data-icon="logos:python" data-inline="false"></span></i> Python</li>
+              <li><i><span class="iconify" data-icon="logos:java" data-inline="false"></span></i> Java</li>
               <li><i><span class="iconify" data-icon="logos:raspberry-pi" data-inline="false"></span></i> Raspberry Pi</li>
               <li><i><span class="iconify" data-icon="flat-color-icons:linux" data-inline="false"></span></i> Linux</li>
               <li><i><span class="iconify" data-icon="logos:git-icon" data-inline="false"></span></i> Git</li>
