--- a/index.html
+++ b/index.html
@@ -336,9 +336,10 @@
               <li><i><span class="iconify" data-icon="flat-color-icons:linux" data-inline="false"></span></i> Linux</li>
               <li><i><span class="iconify" data-icon="logos:git-icon" data-inline="false"></span></i> Git</li>
             </ul>
-            <p>
+            <div>
               Each sensor and module proved to be a strong solution to the proposed simulation as they worked synonymously through system testing to communicate with the database and aid in accurate data transfer between devices.
-            </p>
+            </div>
+            <div><a href="http://www.cs.binghamton.edu/~msha/426526/2019LicensePlateSensing.pdf" target="_blank">Check out our paper →</a></div>
           </div>
         </div>
 
