--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
               <h2 style="font-family: 'Raleway', sans-serif; font-size: 27px;"><b>Binghamton University</b></h2>
               <div style="font-family: 'Raleway', sans-serif; font-size: 15px;">Bachelor of Science in Computer Science</div>
               <div style="font-family: 'Raleway', sans-serif; font-size: 15px;">Class of 2020</div>
-              <div>&nbsp;&nbsp;</div>
+              <div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
         </div>
         <div class="row" data-aos="fade-left">
           <div class="section-title" data-aos="fade-up">
@@ -326,6 +326,7 @@
               crucial tool in home security. We aimed to design a low-cost, versatile automated garage door opener
               that capitalizes on both ease-of-use and home security by developing a License Plate Sensor Android Application.
             </p>
+            <div>&nbsp;&nbsp;</div>
             <ul>
               <div class="section-title" data-aos="fade-up">
                 <h2>Skills Used</h2>
