--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
             <div>
               Each sensor and module proved to be a strong solution to the proposed simulation as they worked synonymously through system testing to communicate with the database and aid in accurate data transfer between devices.
             </div>
-            <div><a href="http://www.cs.binghamton.edu/~msha/426526/2019LicensePlateSensing.pdf" target="_blank">Check out our paper →</a></div>
+            <div><a href="http://www.cs.binghamton.edu/~msha/426526/2019LicensePlateSensing.pdf" target="_blank">Check It Out →</a></div>
           </div>
         </div>
 
