--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
             <p class="font-italic">
               Home automation has become a convenience that homeowners enjoy and benefits society as a
               crucial tool in home security. We aimed to design a low-cost, versatile automated garage door opener
-              that capitalizes on both ease-of-use and home security by developing a License Plate Sensor Android Application.
+              that capitalizes on both ease-of-use and home security by developing a license plate sensor Android application.
             </p>
             <div>&nbsp;&nbsp;</div>
             <ul>
