--- a/index.html
+++ b/index.html
@@ -349,17 +349,19 @@
           <div class="col-md-8 pt-5 order-2 order-md-1" data-aos="fade-up">
             <h3>Development of Human Following Mobile Robot System</h3>
             <p class="font-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              Artificial intelligent robotic systems are highly applicable in real-world situations; societal needs demand the implementation of human detection and following systems as innovations in technology progress.
+              We developed a functioning human-following mobile robot system by integrating robot movement functionality with human detection algorithms.
             </p>
-            <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum
-            </p>
-            <p>
-              Inventore id enim dolor dicta qui et magni molestiae. Mollitia optio officia illum ut cupiditate eos autem. Soluta dolorum repellendus repellat amet autem rerum illum in. Quibusdam occaecati est nisi esse. Saepe aut dignissimos distinctio id enim.
-            </p>
+            <div>&nbsp;&nbsp;</div>
+            <ul>
+              <div class="section-title" data-aos="fade-up">
+                <h2>Skills Used</h2>
+              </div>
+              <li><i><span class="iconify" data-icon="logos:python" data-inline="false"></span></i> Python</li>
+              <li><i><span class="iconify" data-icon="vscode-icons:file-type-robots" data-inline="false"></span></i> ROSbot 2.0</li>
+              <li><i><span class="iconify" data-icon="flat-color-icons:linux" data-inline="false"></span></i> Linux</li>
+            </ul>
+            <div><a href="http://www.cs.binghamton.edu/~msha/426526/2019LicensePlateSensing.pdf" target="_blank">Check It Out →</a></div>
           </div>
         </div>
 
