--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
               <div style="font-family: 'Raleway', sans-serif; font-size: 15px;">Bachelor of Science in Computer Science</div>
               <div style="font-family: 'Raleway', sans-serif; font-size: 15px;">Class of 2020</div>
         </div>
-        <div>&nbsp;&nbsp;</div>
+        <div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
         <div class="row" data-aos="fade-left">
           <div class="section-title" data-aos="fade-up">
             <h2>Graduate</h2>
