--- a/index.html
+++ b/index.html
@@ -369,19 +369,18 @@
             <img src="assets/img/details-3.png" class="img-fluid" alt="">
           </div>
           <div class="col-md-8 pt-5" data-aos="fade-up">
-            <h3>Sunt consequatur ad ut est nulla consectetur reiciendis animi voluptas</h3>
-            <p>Cupiditate placeat cupiditate placeat est ipsam culpa. Delectus quia minima quod. Sunt saepe odit aut quia voluptatem hic voluptas dolor doloremque.</p>
+            <h3>Mission Combat Go</h3>
+            <p>We aimed to integrate electrical, mechanical, and software components through the implementation of different sensors electrically wired and communicating with one another through code on a mechanically-built Go-Kart. The code allows for synchronous communication between an HC-06 wireless Bluetooth module, infrared sensors, and radio frequency transmitters and receivers to program and control the Go-Kart's movement and drop defense mechanisms.</p>
+            <div>&nbsp;&nbsp;</div>
             <ul>
-              <li><i class="icofont-check"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-              <li><i class="icofont-check"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-              <li><i class="icofont-check"></i> Facilis ut et voluptatem aperiam. Autem soluta ad fugiat.</li>
+              <div class="section-title" data-aos="fade-up">
+                <h2>Skills Used</h2>
+              </div>
+              <li><i><span class="iconify" data-icon="logos:python" data-inline="false"></span></i> Python</li>
+              <li><i><span class="iconify" data-icon="vscode-icons:file-type-robots" data-inline="false"></span></i> ROSbot 2.0</li>
+              <li><i><span class="iconify" data-icon="flat-color-icons:linux" data-inline="false"></span></i> Linux</li>
             </ul>
-            <p>
-              Qui consequatur temporibus. Enim et corporis sit sunt harum praesentium suscipit ut voluptatem. Et nihil magni debitis consequatur est.
-            </p>
-            <p>
-              Suscipit enim et. Ut optio esse quidem quam reiciendis esse odit excepturi. Vel dolores rerum soluta explicabo vel fugiat eum non.
-            </p>
+            <div><a href="http://www.cs.binghamton.edu/~msha/426526/2019LicensePlateSensing.pdf" target="_blank">Check It Out →</a></div>
           </div>
         </div>
 
