--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
 
       <div class="row content">
           <div class="col-md-4" data-aos="fade-right">
-            <img src="assets/img/details-3.png" class="img-fluid" alt="">
+            <img src="assets/img/gokart.png" class="img-fluid" alt="">
           </div>
           <div class="col-md-8 pt-5" data-aos="fade-up">
             <h3>Mission Combat Go</h3>
@@ -376,9 +376,9 @@
               <div class="section-title" data-aos="fade-up">
                 <h2>Skills Used</h2>
               </div>
-              <li><i><span class="iconify" data-icon="logos:python" data-inline="false"></span></i> Python</li>
-              <li><i><span class="iconify" data-icon="vscode-icons:file-type-robots" data-inline="false"></span></i> ROSbot 2.0</li>
-              <li><i><span class="iconify" data-icon="flat-color-icons:linux" data-inline="false"></span></i> Linux</li>
+              <li><i><span class="iconify" data-icon="logos:c" data-inline="false"></span></i> C</li>
+              <li><i><span class="iconify" data-icon="logos:java" data-inline="false"></span></i> Java</li>
+              <li><i><span class="iconify" data-icon="logos:arduino" data-inline="false"></span></i> Arduino</li>
             </ul>
             <div><a href="http://www.cs.binghamton.edu/~msha/426526/2019LicensePlateSensing.pdf" target="_blank">Check It Out →</a></div>
           </div>
