--- a/index.html
+++ b/index.html
@@ -334,6 +334,7 @@
                 </ul>
               </div>
             </div>
+          </div>
 
         <div class="row content">
           <div class="col-md-4 order-1 order-md-2" data-aos="fade-left">
