--- a/index.html
+++ b/index.html
@@ -358,6 +358,7 @@
           </div>
         </div>
 
+      <div class="row content">
         <div class="col-md-4" data-aos="fade-right">
           <img src="assets/img/project1.png" class="img-fluid" alt="">
         </div>
@@ -381,6 +382,7 @@
           </ul>
           <div><a href="http://www.cs.binghamton.edu/~msha/426526/2019LicensePlateSensing.pdf" target="_blank">Check It Out →</a></div>
         </div>
+      </div>
 
       <!--  <div class="row content">
           <div class="col-md-4 order-1 order-md-2" data-aos="fade-left">
