--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
               </div>
               <div class="col-md-8 pt-5" data-aos="fade-up">
                 <h3>Mission Combat Go</h3>
-                <p>We aimed to integrate electrical, mechanical, and software components through the implementation of different sensors electrically wired and communicating with one another through code on a mechanically-built Go-Kart. The code allows for synchronous communication between an HC-06 wireless Bluetooth module, infrared sensors, and radio frequency transmitters and receivers to program and control the Go-Kart's movement, stop the vehicle's motion, and drop defense mechanisms.</p>
+                <p>We aimed to integrate software, electrical, and mechanical design through the implementation of different sensors electrically wired and communicating with one another through code on a mechanically-built Go-Kart. The code allows for synchronous communication between an HC-06 wireless Bluetooth module, infrared sensors, and radio frequency transmitters and receivers to program and control the Go-Kart's movement, stop the vehicle's motion, and drop defense mechanisms.</p>
                 <div>&nbsp;&nbsp;</div>
                 <ul>
                   <div class="section-title" data-aos="fade-up">
