--- a/index.html
+++ b/index.html
@@ -864,7 +864,7 @@
 
           <div class="col-lg-4 col-md-6">
             <div class="footer-info">
-              <h3>Emily Lakic</h3>
+              <!--<h3>Emily Lakic</h3>-->
             <!--  <p class="pb-3"><em>Qui repudiandae et eum dolores alias sed ea. Qui suscipit veniam excepturi quod.</em></p>
               <p>
                 A108 Adam Street <br>
