--- a/index.html
+++ b/index.html
@@ -862,10 +862,11 @@
       <div class="container">
         <div class="row">
 
-          <div class="col-lg-4 col-md-6">
+          <!--<div class="col-lg-4 col-md-6">-->
+          <center>
             <div class="footer-info">
-              <!--<h3>Emily Lakic</h3>-->
-            <!--  <p class="pb-3"><em>Qui repudiandae et eum dolores alias sed ea. Qui suscipit veniam excepturi quod.</em></p>
+              <h3>Emily Lakic</h3>-->
+            <p class="pb-3"><em>Qui repudiandae et eum dolores alias sed ea. Qui suscipit veniam excepturi quod.</em></p>
               <p>
                 A108 Adam Street <br>
                 NY 535022, USA<br><br>
@@ -877,10 +878,11 @@
                 <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
                 <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
                 <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a> -->
+                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
               </div>
             </div>
-          </div>
+          </center>
+          <!--</div>-->
 
         <!--  <div class="col-lg-2 col-md-6 footer-links">
             <h4>Useful Links</h4>
