--- a/index.html
+++ b/index.html
@@ -865,7 +865,7 @@
           <!--<div class="col-lg-4 col-md-6">-->
           <center>
             <div class="footer-info">
-              <h3>Emily Lakic</h3>-->
+              <h3>Contact</h3>-->
             <p class="pb-3"><em>Qui repudiandae et eum dolores alias sed ea. Qui suscipit veniam excepturi quod.</em></p>
               <p>
                 A108 Adam Street <br>
