--- a/index.html
+++ b/index.html
@@ -865,7 +865,7 @@
           <!--<div class="col-lg-4 col-md-6">-->
           <center>
             <div class="footer-info">
-              <h3>Contact</h3>-->
+              <h3>Contact</h3>
               <div class="social-links mt-3">
                 <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
                 <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
