--- a/index.html
+++ b/index.html
@@ -867,11 +867,9 @@
             <div class="footer-info">
               <h3>Contact</h3>
               <div class="social-links mt-3">
-                <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-                <a href="#" class="instagram"><span class="iconify" data-icon="dashicons:email-alt" data-inline="false"></span></a>
-                <a href="#" class="google-plus"><i class="bx bxl-dev-to"></i></a>
+                <a href="mailto:emilylakic@gmail.com" class="instagram"><span class="iconify" data-icon="dashicons:email-alt" data-inline="false"></span></a>
                 <a href="https://www.linkedin.com/in/emilylakic/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                <a href="https://devpost.com/emilylakic" class="google-plus"><i class="bx bxl-dev-to"></i></a>
               </div>
             </div>
           </center>
