--- a/index.html
+++ b/index.html
@@ -878,7 +878,7 @@
     </div>
 
     <div class="container">
-      <div class="copyright">
+      <div class="copyright" style="font-size:7px">
         &copy; Copyright <strong><span>Bootslander</span></strong>. All Rights Reserved.
       </div>
       <div class="credits">
