--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li class="active"><a href="index.html">Home</a></li>
-          <li><a href="/about">Work Experience</a></li>
-          <li><a href="/features">Skills</a></li>
+          <li><a href="#about">Work Experience</a></li>
+          <li><a href="#features">Skills</a></li>
         </ul>
       </nav><!-- .nav-menu -->
 
