--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
     <div class="container d-flex align-items-center justify-content-between">
 
       <div class="logo">
-        <h1><a href="index.html"><span>EMILY LAKIC</span></a></h1>
+        <h1><a href="/index"><span>EMILY LAKIC</span></a></h1>
       </div>
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
-          <li class="active"><a href="index.html">Home</a></li>
+          <li class="active"><a href="/index">Home</a></li>
           <li><a href="#about">Work Experience</a></li>
           <li><a href="#features">Skills</a></li>
         </ul>
