--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
   <main id="main">
 
     <!-- ======= About Section ======= -->
-    <!--<section id="about" class="about">
+    <section id="about" class="about">
       <div class="container-fluid">
 
         <div class="row">
@@ -146,7 +146,7 @@
     </section><!-- End About Section -->
 
     <!-- ======= Features Section ======= -->
-   <!-- <section id="features" class="features">
+   <section id="features" class="features">
       <div class="container">
         <div class="row content">
           <div class="col-sm-4" data-aos="fade-right" data-aos-delay="100">
@@ -275,7 +275,7 @@
     </section><!-- End Features Section -->
 
     <!-- ======= Details Section ======= -->
-    <!--<section id="details" class="details">
+    <section id="details" class="details">
       <div class="container">
 
         <div class="row content">
@@ -352,7 +352,7 @@
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
- <!--<footer id="footer">
+ <footer id="footer">
     <div class="footer-top">
       <div class="container">
         <div class="row">
