--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="300">
               <div class="icon"><i><img style="width: 48px; height: 48px" src="/assets/img/nyctreats.png"/></i></div>
               <h4 class="title"><a>NYC Treats</a></h4>
-              <p class="description">2014 - Present | CEO with 145,000+ Follower Base</p>
+              <p class="description">2014 - Present | CEO with 150,000+ Follower Base</p>
             </div>
 
           </div>
@@ -267,8 +267,8 @@
             <h2>Graduate</h2>
           </div>
             <h2 style="font-family: 'Raleway', sans-serif; font-size: 27px;"><b>TBD</b></h2>
-            <div style="font-family: 'Raleway', sans-serif; font-size: 15px;">Master of Science</div>
-            </div>
+            <!--<div style="font-family: 'Raleway', sans-serif; font-size: 15px;">M.S.</div>-->
+        </div>
       </div>
       </div>
     </div>
