--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Emuhly</title>
-  <meta content="" name="description">
+  <title>Emily Lakic</title>
+  <meta content="Computer Science Graduate and Software Engineer at Lockheed Martin" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
