--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Emily Lakic</title>
-  <meta content="Computer Science Graduate and Software Engineer at Lockheed Martin" name="description">
+  <meta content="Software Engineer at Lockheed Martin, M.Eng. at Cornell University, B.S. in Computer Science" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
