--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
 
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="300">
               <div class="icon"><i><img style="width: 48px; height: 48px" src="/assets/img/nyctreats.png"/></i></div>
-              <h4 class="title"><a>NYC Treats</a></h4>
-              <p class="description">2014 - Present | CEO with 150,000+ Follower Base</p>
+              <h4 class="title"><a href="https://nyctreats.co/" target="_blank">NYC Treats</a></h4>
+              <p class="description">2014 - Present | CEO with 157,000+ Follower Base</p>
             </div>
 
           </div>
@@ -362,10 +362,11 @@
           <center>
             <div class="footer-info">
               <h3>Contact</h3>
-              <div class="social-links mt-3">
-                <a href="mailto:emilylakic@gmail.com" class="instagram"><span class="iconify" data-icon="dashicons:email-alt" data-inline="false"></span></a>
-                <a href="https://www.linkedin.com/in/emilylakic/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-                <a href="https://devpost.com/emilylakic" class="google-plus"><i class="bx bxl-dev-to"></i></a>
+              <div class="social-links mt-4">
+                <a href="mailto:emilylakic@gmail.com" class="email"><span class="iconify" data-icon="dashicons:email-alt" data-inline="false"></span></a>
+                <a href="https://www.linkedin.com/in/emilylakic/" target="_blank" class="linkedin"><span class="iconify" data-icon="akar-icons:linkedin-fill" data-inline="false"></span></a>
+                <a href="https://github.com/emilylakic" target="_blank" class="github"><span class="iconify" data-icon="bx:bxl-github" data-inline="false"></span></a>
+                <a href="https://devpost.com/emilylakic" target="_blank" class="devpost"><span class="iconify" data-icon="simple-icons:devpost" data-inline="false"></span></a>
               </div>
             </div>
           </center>
