--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@
                     <nav class="classy-navbar justify-content-between" id="deliciousNav">
 
                         <!-- Logo -->
-                        <a class="nav-brand" href="index.html"><img src="img/icon.png" alt=""></a>
+                        <a class="nav-brand" href="index.html"><img src="img/el.png" alt=""></a>
 
                         <!-- Navbar Toggler -->
                         <div class="classy-navbar-toggler">
